Fin de Mapas en Angular

--- a/src/app/maps/components/side-menu/side-menu.component.html
+++ b/src/app/maps/components/side-menu/side-menu.component.html
@@ -3,7 +3,7 @@
   <li *ngFor="let item of menuItems"
     [routerLink]="[ item.route ]"
     routerLinkActive="active"
-    class="list-group-item">
+    class="list-group-item border-primary">
     {{ item.name }}
   </li>
 </ul>
